@@ -6,6 +6,7 @@ NEWS
 - 1.6.4 -
   * Use octal mode for -M (patch by dfjoerg)
   * Add -b backlog option (fixes #2422, patch by aschmitz)
+  * Restrict Unix socket file ownership by default to ug=rw
 
 - 1.6.3 - 2009-09-23
   * Fix unix socket mode change to work without specifying user/group for socket
